// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`picks different icon for external links 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 200,
        "justifyContent": "center",
        "paddingHorizontal": 28,
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      type="h1"
    >
      Fruit...
    </Text>
    <Image
      source={1}
      style={
        Object {
          "alignSelf": "center",
          "marginLeft": 8,
          "transform": Array [
            Object {
              "translateY": -8,
            },
          ],
        }
      }
    />
  </View>
  <Text
    markdown={false}
    style={
      Object {
        "color": "#ffffff",
      }
    }
    type="h3"
  >
    Apples, Bananas, Tomatos
  </Text>
</Touchable>
`;

exports[`picks different icon for external links with contrast color 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 200,
        "justifyContent": "center",
        "paddingHorizontal": 28,
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "color": "#2d2f7f",
        }
      }
      type="h1"
    >
      Fruit...
    </Text>
    <Image
      source={1}
      style={
        Object {
          "alignSelf": "center",
          "marginLeft": 8,
          "transform": Array [
            Object {
              "translateY": -8,
            },
          ],
        }
      }
    />
  </View>
  <Text
    markdown={false}
    style={
      Object {
        "color": "#2d2f7f",
      }
    }
    type="h3"
  >
    Apples, Bananas, Tomatos
  </Text>
</Touchable>
`;

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 200,
        "justifyContent": "center",
        "paddingHorizontal": 28,
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      markdown={false}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      type="h1"
    >
      Fruit...
    </Text>
    <Image
      source={1}
      style={
        Object {
          "alignSelf": "center",
          "marginLeft": 8,
          "transform": Array [
            Object {
              "translateY": -8,
            },
          ],
        }
      }
    />
  </View>
  <Text
    markdown={false}
    style={
      Object {
        "color": "#ffffff",
      }
    }
    type="h3"
  >
    Apples, Bananas, Tomatos
  </Text>
</Touchable>
`;
